version 2.2 - 5 new enchants.